maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:44: error: type mismatch;
 found   : Unit
 required: Boolean
    if (T(indice) = getIndication(getX(),getY())-1)
                  ^